# zerotick

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-language-pack.mjs  check-locales.mjs  check-release.mjs  ensure-icons.mjs  extract-changelog.mjs  generate-missing-locales.mjs  generate-tray-locales.mjs  prepare-dev.mjs  tauri-dev-admin.mjs
scripts/checks/: check-locales.mjs  check-release.mjs
src/: i18n.js  main.js  panels.js  select-menu.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: tray.json
src-tauri/src/: audio.rs  autostart.rs  bluetooth.rs  bsod.rs  commands.rs  devices.rs  engine.rs  events.rs  history.rs  i18n.rs  language_packs.rs  lib.rs  main.rs  monitor.rs  network.rs  notify.rs  ports.rs  repair.rs  services.rs  settings.rs  tray.rs  updates.rs  usb_storage.rs
src-tauri/src/utils/: device_name.rs  device_path.rs  elevated.rs  guid.rs  logging.rs  mod.rs  powershell.rs  process.rs  wmi_runner.rs
src/locales/: assemble.js  catalog.js  current-patches.js  en.js  generated-patches.js  packs.js  shared-labels.js  zh-CN.js
