[package]
name = "zerotick"
version = "0.1.4"
description = "ZeroTick — Windows 系统故障诊断与实时追踪桌面软件"
authors = ["ZeroTick Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.82"

[lib]
name = "zerotick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心 + 系统托盘
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

# 序列化（Tauri Event / Command 通道）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows Win32 API 投影
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_EventLog",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

# 异步任务调度
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
] }

chrono = { version = "0.4", features = ["clock", "std", "serde"] }
wmi = "0.14"

# 后端日志（文件 + stderr，不依赖前端）
owo-colors = "4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
